# GroupSourcesByFolder.cmake

./: CMakeLists.txt  README.md
test/: CMakeLists.txt
